--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,15 @@
 */
 body{
     user-select: none;
-   overflow-x: hidden;
+    overflow-x: hidden;
+}
+.appholder{
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom:0;
+    overflow-x: hidden;
 }
 #frontPanel{
     position: absolute;
@@ -19,6 +27,7 @@ body{
     transition: left 0.5s ease;
     background-color: lightblue;
     z-index: 1;
+    overflow-x: hidden;    
 }
 #backPanel{
     position: absolute;
